
 - Extend available gallery example (plot_frangi.py) by the new filters as well 
as a comparison of the detection of dark and light ridges, respectively 
(plot_ridge_filter.py).

 - Add new identity filter which accepts arbitrary keywords and returns the 
input image. This is very convenient for automated plotting of different 
filters and comparison to the original image, see gallery example.


Additional note for future contributions:

 - The available Hybrid Hessian filter does not agree with its description in 
[4]. In particular, it should not simply be a thresholded version of the 
Frangi filter but involves different smoothing before the computation of the 
Hessian eigenvalues (cf. equations (2)-(6) in [4]). Moreover, the implemented 
thresholding does not agree with the described one (cf. equation (15) in [4]).

   
Change files:
    
Remove  scikit-image/doc/examples/plot_frangi.py
Add     scikit-image/doc/examples/ridges/plot_ridge_filter.py

Remove  scikit-image/skimage/filters/_frangi.py
Add     scikit-image/skimage/filters/ridges.py

Remove  scikit-image/skimage/filters/tests/test_frangi.py
Add     scikit-image/skimage/filters/tests/test_ridges.py

Add     scikit-image/skimage/filters/_identity.py

Changed scikit-image/skimage/filters/__init__.py


References:

[1] Frangi, A. F., Niessen, W. J., Vincken, K. L., & Viergever, M. A. (1998, 
October). Multiscale vessel enhancement filtering. In International Conference 
on Medical Image Computing and Computer-Assisted Intervention (pp. 130-137). 
Springer Berlin Heidelberg.

[2] Meijering, E., Jacob, M., Sarria, J. C., Steiner, P., Hirling, H., Unser, 
M. (2004). Design and validation of a tool for neurite tracing and analysis in 
fluorescence microscopy images. Cytometry Part A, 58(2), 167-176.

[3] Sato, Y., Nakajima, S., Shiraga, N., Atsumi, H., Yoshida, S., Koller, T., 
..., Kikinis, R. (1998). Three-dimensional multi-scale line filter for 